src/styles/catalogo/phone.css
/*NOTE: NAV movil*/

.ASri > * + * {
  margin-left: 0.8rem; /* 1rem = 16px */
}
.ASri{

    margin-top: 2rem;
  display: flex;          /* hidden */
  padding-left: 1rem;     /* px-8 → padding en eje X */
  padding-right: 1rem;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
}
.Sope{
    position: absolute;
    top: 300%;
    background-color: #080b0baa;
    width: 100%;
    padding: 3rem;
    display: grid;
    justify-content: center;
    align-items: center;
    text-align: center;
    filter: drop-shadow(5px 5px 15px #ff000091) drop-shadow(-5px -5px 10px #0000aac9);
  background-color: #000122a8;
}
.Sjoio{
    /* background-color: #a80b0baa; */
}
#SBI{
    position: absolute;
    top: 70%;
    
  display: block;          /* hidden */
  z-index: 20;
    @media (min-width: 1204px) {
    display: none;
    }
}
.ybttt{
    /* background-color: #7789f0; */
    color: #ffffff;
  display: inline-block; /* necesario */
color: #a80b0b;
  filter: drop-shadow(5px 5px 10px #f70475) drop-shadow(-3px -3px 5px #ae0303);

  text-decoration: underline;
  text-underline-offset: 0.3rem;
  text-decoration-thickness: 2px;
  font-size: 2.0rem;
  animation: cambioColor 2s infinite alternate;
    cursor: pointer;
}
.ybttt:hover{

  animation: cambioColorH 1.5s infinite alternate;
}
@keyframes cambioColorH {
  from {
    color: #d83b3b;
  filter: drop-shadow(5px 5px 10px #f72495) drop-shadow(-3px -3px 5px #ce2323);
    scale: 1.1;
  }
  to {
    color: #ff3030;
  filter: drop-shadow(5px 5px 10px #f72445) drop-shadow(-3px -3px 5px #ff2323);
  scale: 1.2;
  }
}

@keyframes cambioColor {
  from {
    color: #a80b0b;
  filter: drop-shadow(5px 5px 10px #f70475) drop-shadow(-3px -3px 5px #ae0303);
    scale: 1;
  }
  to {
    color: #cf0000;
  filter: drop-shadow(5px 5px 10px #f70425) drop-shadow(-3px -3px 5px #ff0303);
  scale: 1.1;
  }
}
/*NOTE: NAV bar*/



/* space-x-4 → margen entre hijos */
.Sri > * + * {
  margin-left: 0.8rem; /* 1rem = 16px */
}
.Sri{

  display: flex;          /* hidden */
  padding-left: 1rem;     /* px-8 → padding en eje X */
  padding-right: 1rem;
    @media (max-width: 1204px) {
    display: none;
    }
}
#Snav-cont{
  display: flex;          /* hidden */
    @media (max-width: 1204px) {
    display: none;
    }
}

.Sma-tx{
    /* background-color: #7789f0; */
    color: #ffffff;
  display: inline-block; /* necesario */
  filter: drop-shadow(5px 5px 10px #ee0050) drop-shadow(-3px -3px 5px #000088);
  /* font-weight: lighter; */
color: #ff0036;
  filter: drop-shadow(5px 5px 10px #f70475) drop-shadow(-3px -3px 5px #ae0303);

  text-decoration: underline;
  text-underline-offset: 0.3rem;
  text-decoration-thickness: 2px;
  font-size: 1.0rem;
  transition: all 1s ease;
      @media (max-width: 1204px) {
  font-size: 1.0rem;
      }
}
 .Sma-tx:hover{
color: #ff99ac;
  filter: drop-shadow(5px 5px 10px #f487f9) drop-shadow(-3px -3px 5px #ff90cf);
}
.Isombra:hover .Sma-tx{
color: #ff99ac;
  filter: drop-shadow(5px 5px 10px #f487f9) drop-shadow(-3px -3px 5px #ff90cf);
}
.Sma-it{
    /* background-color: #044f78; */
  margin-inline: 0.5rem;
  padding: 0.7rem;
  padding-top: 0.4rem;

}


.Isombra {
    /* width: 80%; */
    /* height: 90%; */
  display: inline-block;
  filter: drop-shadow(5px 5px 15px red) drop-shadow(-5px -5px 10px #0000aa);
  margin-inline: 0.2rem;
  padding: 0.2rem;
  padding-top: 0.0rem;
  transition: all 1s ease;
  @media (max-width: 1204px) {
      margin-top: 1rem;
  filter: drop-shadow(5px 5px 15px #ff0000a0) drop-shadow(-5px -5px 10px #0000aaa0);
  }
}
.Isombra:hover{
    filter: drop-shadow(5px 5px 15px #f90707) drop-shadow(-5px -5px 10px #ff3652);
}

.Itrapecio {
  width: 100%;
  height: 100%;
  background: #ffffff50;
  clip-path: polygon(0 0, 100% 0, 95% 100%, 05% 100%);

    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;

  transition: all 1s ease;
  @media (max-width: 1204px) {
    background: #ff365240;
  }
}
.Itrapecio:hover{
    background: #ff0c0c4f;
}

#Snav-item-b{
  font-weight: 500;             
  display: flex;                
  flex-direction: row;
  @media (max-width: 1204px) {
    flex-direction: column;       
  }
}




#Snav-item{
    display: flex;
    width: auto;
    justify-content: space-around;

  @media (max-width: 1204px) {
      display: none;
  }
}

#NNsb{
    position: absolute;
    width: 100%;
    height: 9%;
    /* background: #489010; */
    z-index: 40;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
      @media (max-width: 1204px) {
    height: 7%;
      }
}
#NSb{
    background: #f94030;
    position:relative;
    width: 80%;
    height: 100%;
    z-index: 45;
  clip-path: polygon(0 0, 100% 0, 80% 100%, 20% 100%);
  box-shadow: red 5px 5px 15px;
  filter: drop-shadow(5px 5px 10px #0000aa);
}

.sombra {
    width: 80%;
    height: 90%;
  display: inline-block;
  filter: drop-shadow(5px 5px 15px red) drop-shadow(-5px -5px 10px #0000aa);
}

.trapecio {
  width: 100%;
  height: 100%;
  background: #00012250;
  clip-path: polygon(0 0, 100% 0, 95% 100%, 05% 100%);

    display: flex;
    justify-content: space-evenly;
    align-items: center;
    text-align: center;
    @media (max-width: 1204px) {
    justify-content: center;
    }
}
#NIYO{
    position: relative;
    height: 130%;
    width: 20%;
    @media (max-width: 1204px) {
        width: 80%;
    }
}

/*NOTE: base*/
#Srop{

    position: relative;
    display: flex;
    width: 50%;
    height: 50%;
    scale: 1.6;
    left: 10;
}
#Spoo{
  position: relative;              /* relative */
    width: 50%;
    height: 90%;
    background: #00012234;
    display: grid;
    justify-content: center;
    align-items: center;
    text-align: center;
  border-radius: 5px;
  box-shadow: #000122a4 5px 5px 15px;
  /* filter: drop-shadow(5px 5px 10px #0000aa); */
filter: drop-shadow(5px 5px 15px #ff00004a) drop-shadow(-5px -5px 10px #0000aa70);
  background: #00012234;
  padding-inline: 0.5rem;
}
#Spio{
  position: relative;
  bottom: 1%;
  width: 100%;
  height: 3px; 
  background: #ee0050;
  z-index: 20;
  overflow: hidden; 
  border-radius: 4px;
  box-shadow: red 5px 5px 15px;
  filter: drop-shadow(5px 5px 10px #0000aa);
}
#Sdfr{
    height: auto;
    width: 100%;
}
#Sdf{
    position: relative;
    top: -10;
    height: auto;
    width: 100%;
}
.Frgo{
    color: #fdb50a;
    display: inline-block; /* necesario */
    /* filter: drop-shadow(5px 5px 10px #ee0050) drop-shadow(-3px -3px 5px #000088); */
    filter: drop-shadow(0px 2px 5px #eedf00) drop-shadow(-0px -1px 2px #800);
    padding: 1.2rem;
    font-size: 1.4rem;
      @media (max-width: 1204px) {
    padding: 0rem;
    margin-top: 0.4rem;
    font-size: 0.9rem;
      }
}
#Srbar{
  position: absolute;
  bottom: 5%;
  width: 90%;
  height: 3px; /* grosor de la línea */
  background: #ee0050;
  z-index: 20;
  overflow: hidden; /* evita que la animación salga */
  border-radius: 4px;
  box-shadow: red 5px 5px 15px;
  filter: drop-shadow(5px 5px 10px #0000aa);
}
.TSK{
    color: #ee0050;
  display: inline-block; /* necesario */
  filter: drop-shadow(5px 5px 10px #ee0050) drop-shadow(-3px -3px 5px #000088);
  font-weight: bold;
  text-decoration: underline;
  text-underline-offset: 0.3rem;
  text-decoration-thickness: 2px;
    font-size: 1.5rem;
      @media (max-width: 1204px) {
    font-size: 1.1rem;
      }
}

#TLO{
    position: absolute;
    width: 80%;
    height: 30%;
    top: 5;
  @media (max-width: 1204px) {
    height: 25%;
  }
}

.SmartPhoneA {
    width: 65%;                    /* lg:w-3/6 -> 50% */
    height: 50%;
  position: relative;              /* relative */
  display: flex;                   /* flex */
  align-items: center;             /* items-center */
  background-color: #00012258; /* bg-gray-800/45 */
  margin: 1.25rem;                 /* m-5 -> 1.25rem */
  padding: 1.25rem;                /* p-5 -> 1.25rem */
  border-radius: 0.3rem;           /* rounded-lg -> 0.5rem */
  opacity: 0;                      /* opacity-0 */
  top: 0;                     /* top-6 -> 1.5rem */
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    /* box-shadow: #000122  5px 5px 15px; */
filter: drop-shadow(5px 5px 15px #ff000091) drop-shadow(-5px -5px 10px #0000aac9);

  @media (max-width: 1204px) {
    padding: 1.0rem;               
    width: 90%;                    
  }
  @media (max-height : 700px) {
      height: 70%;
    top: 20;                     /* top-6 -> 1.5rem */
  }

}

.bottom-bar {
  position: absolute;
  bottom: 8%;
  width: 90%;
  height: 4px; /* grosor de la línea */
  background: #000122b8;
  box-shadow: #000122 5px 5px 15px;
  z-index: 20;
  overflow: hidden; /* evita que la animación salga */
  border-radius: 4px;
}

.bottom-bar::after {
  content: "";
  position: absolute;
  top: 0;
  left: -20%; /* arranca fuera */
  width: 20%;
  height: 100%;
  background: linear-gradient(to right, transparent,red, transparent);
  /* box-shadow: red 5px 5px 15px; */
  animation: moveLine 4s linear infinite;
}

@keyframes moveLine {
  0% {
    left: -20%;
  }
  100% {
    left: 100%;
  }
}
#STbase{
    position: absolute;
    display: flex;

    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
}


.slider-container {
  position: absolute;
  width: 100%;
  overflow: hidden;
  height: 100px; /* ajusta al alto de tus imágenes */
  bottom: 10%;
  box-shadow: red 5px 5px 15px;
  filter: drop-shadow(5px 5px 10px #0000aa);
}

.slider-track {
  display: flex;
  width: max-content; /* se adapta al número de imágenes */
  animation: scroll 20s linear infinite;
}

.slider-track img {
  width: 150px;
  height: 100px;
  object-fit: cover;
}

@keyframes bttta {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(-50%);
  }
}
@keyframes scroll {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(-50%);
  }
}


.img-container {
  display: inline-block;
  border-radius: 10px; /* opcional */
  overflow: hidden;    /* evita que sobresalga la img */
}

.img-container img {
  display: block;
  width: 100%;
  height: auto;
}

